# MaxOS

./: .env.example  .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  Dockerfile  HANDOFF_TO_CODEX_GEMINI.md  MERGE_CONFLICT_RESOLUTION.md  MOCKING_IMPLEMENTATION_SUMMARY.md  PR13_RESOLUTION_SUMMARY.md  README.md  TOKENS_QUICKSTART.md  demo_intent_classification.py  docker-compose.yml  pyproject.toml  test_token_config.py
.github/workflows/: ci.yml
config/: README.md  multi_agent.yaml  settings.example.yaml
docs/: AGENT_EVOLVER_INTEGRATION.md  AGENT_IMPLEMENTATION.md  ARCHITECTURE.md  COMPLETION_ROADMAP.md  FIRESTORE_SETUP.md  GOOGLE_STACK_SETUP.md  GRPC_API.md  LEARNING_SYSTEM_DEMO.md  LLM_INTENT_CLASSIFICATION.md  PREDICTIVE_AGENT_ARCHITECTURE.md  ROADMAP.md  SESSION_PROGRESS.md  SESSION_SUMMARY_2025-11-15.md  SETUP_GUIDE.md  TOKEN_SETUP.md
examples/: full_google_stack_demo.py  gemini_receipt_scan.py  gemini_voice_command.py  grpc_client.py  multi_agent_example.py  test_google_stt.py  test_google_tts.py  test_mediapipe.py
max_os/: __init__.py  runner.py
max_os/agents/: __init__.py  base.py  base_specialized_agent.py
max_os/core/: confirmation.py  context_manager.py  entities.py  gemini_client.py  intent.py  intent_classifier.py  (+17 more)
scripts/: bootstrap.sh  maxos-grpc.service  maxos.service  naked_boot.sh  setup_firestore.py
tests/: MOCKING_GUIDE.md  README.md  conftest.py  test_confirmation.py  test_context_engine.py  test_context_manager.py  test_entity_extraction.py  test_firestore_integration.py  test_gemini_client.py  test_google_stack_integration.py  test_grpc_server.py  test_integration_rollback.py  test_intent_classifier.py  test_llm_intent_classifier.py  test_memory.py  test_multi_agent_integration.py  test_multi_agent_orchestrator.py  test_multimodal_handler.py  test_orchestrator.py  test_personality.py  test_personality_predictions.py  test_planner.py  test_prediction.py  test_prompt_filter.py  test_prompts.py  test_realtime_learning.py  test_rollback.py  test_senses_mock.py  test_specialized_agents.py  test_transactions.py  verify_no_network.py
(+71 files in other folders)
