[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maxos"
version = "0.1.0"
description = "Experimental multi-agent interface layer for an AI-native Linux operating system"
authors = [
  {name = "TezzaWorks Automation Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.34",
  "openai>=1.50",
  "langchain>=0.3.0",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "psutil>=5.9",
  "aiofiles>=24.1",
  "aiohttp>=3.9",
  "click>=8.1",
  "redis>=5.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "dbus-next>=0.2.3",
  "watchdog>=2.3.1",
  "structlog>=24.2",
  "scikit-learn>=1.5",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "black>=24.8",
  "fakeredis>=2.20"
]
systemd = [
  "dbus-python>=1.3"
]

[tool.setuptools]
packages = ["max_os"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
